--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -31,12 +31,11 @@ button:hover {
     font-weight: 600;
 }
 .filters h3 {
-    margin-left: 15%;
+    margin-left: 3rem;
     margin-bottom: 0;
     font-weight: 600;
 }
 .filters h4 {
-    margin-left: 15%;
     margin-top: 0;
     font-weight: 400;
     font-size: 14px;
@@ -78,6 +77,10 @@ button:hover {
     margin: 0px;
 }
 
+.amenities .popover li input{
+    margin-left: 10px;
+}
+
 .locations .popover {
     margin-top: 0%;
 }
@@ -100,4 +103,28 @@ button:hover {
 .amenities:hover .popover,
 .locations:hover .popover {
     visibility: visible;
+}
+
+
+.amenities .content-text{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    height: 2rem;
+    width: 16rem;
+    padding-left: 3rem;
+}
+
+
+.locations h6{
+    margin:0rem;
+    padding-left: 1rem;
+    line-height:1 rem;
+}
+
+.locations .show-text{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    height:2rem;
 }
